# Mathe2

./: AusgleichsParabel.xlsx  CMakeLists.txt  CMyVector.cpp  CMyVector.h  DGLTest.cpp  Main.cpp  MatrixTest.cpp  image2array.py
data/: example1.txt  example1_dft_0001.txt  example1_dft_001.txt  example1_dft_01.txt  example1_dft_1.txt  example1_dft_default.txt  example2.txt  example2_dft_0001.txt  example2_dft_001.txt  example2_dft_01.txt  example2_dft_1.txt  example2_dft_default.txt  image_dft.txt  image_dft_10.txt  image_dft_100.txt  image_dft_1000.txt  image_dft_30.txt  image_dft_300.txt  image_idft.txt  image_idft_10.txt  image_idft_100.txt  image_idft_1000.txt  image_idft_30.txt  image_idft_300.txt  image_original.txt
lib/: CComplex.h  CDGLSolver.h  CMyMatrix.h  CMyVector.h  CRandom.h  Helper.h
src/: CComplex.cpp  CDGLSolver.cpp  CMyMatrix.cpp  CMyVector.cpp  CRandom.cpp
tests/: CComplexTest.cpp  CMyMatrixTest.cpp  CRandomTest.cpp  DFTTest.cpp  DGLTest.cpp
